// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice tests on web DEFAULT template renders a single child element 1`] = `
<SliceContainer>
  <ChildrenContainer>
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983dd"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983de"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983de"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983de"
      />
    </ChildContainer>
  </ChildrenContainer>
</SliceContainer>
`;

exports[`Slice tests on web DEFAULT template renders three child elements 1`] = `
<SliceContainer>
  <ChildrenContainer>
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983dd"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983de"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983de"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983de"
      />
    </ChildContainer>
  </ChildrenContainer>
</SliceContainer>
`;

exports[`Slice tests on web DEFAULT template renders two child elements 1`] = `
<SliceContainer>
  <ChildrenContainer>
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983dd"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
    </ChildContainer>
    <Separator
      key="separator-08604618-fb0e-11e7-a987-7fcf5e9983de"
    />
    <ChildContainer
      key="08604618-fb0e-11e7-a987-7fcf5e9983de"
    >
      <ExampleChild
        key="08604618-fb0e-11e7-a987-7fcf5e9983de"
      />
    </ChildContainer>
  </ChildrenContainer>
</SliceContainer>
`;

exports[`Slice tests on web LEAD_AND_TWO template renders a single child element 1`] = `
<SliceContainer>
  <Container>
    <LeadContainer>
      <ExampleChild />
    </LeadContainer>
  </Container>
</SliceContainer>
`;

exports[`Slice tests on web LEAD_AND_TWO template renders three child elements 1`] = `
<SliceContainer>
  <Container>
    <LeadContainer>
      <ExampleChild />
    </LeadContainer>
    <Separator />
    <ChildrenContainer>
      <ChildContainer1>
        <ExampleChild />
      </ChildContainer1>
      <ChildContainer2>
        <ExampleChild />
      </ChildContainer2>
    </ChildrenContainer>
  </Container>
</SliceContainer>
`;

exports[`Slice tests on web LEAD_AND_TWO template renders two child elements 1`] = `
<SliceContainer>
  <Container>
    <LeadContainer>
      <ExampleChild />
    </LeadContainer>
    <Separator />
    <ChildrenContainer>
      <ChildContainer1>
        <ExampleChild />
      </ChildContainer1>
    </ChildrenContainer>
  </Container>
</SliceContainer>
`;
